	  - slots for grace note buttons changed from setToTN8() -> setToGN8() and similar. Probably T was from "tiny", but musicians use an expression grace note for these kind of notes, so G.
	* Hidden rest button now acts like others when in Edit mode and similar. But there's a major conflict between STAT_HIDDEN and STAT_CROSS. Problem is that 32 bits for status were already taken and there's no spare one for STAT_HIDDEN. I'll try to declare status_ to be 64 bit (long), so we'll have enough space for the future. An issue for the next commit. R312
	* R313, R320:
	  - NMusElement::status_ is now unsigned 64bit integer. This way, hidden rests can have their unique flag and we have plenty of space for other flags in the future. NMusElement::status2_ is still unsigned int.
	  - status and status2 variables changed to status_type and unsigned throughout the code
	  - some internal renaming like state -> status, where state was the supposed 64bit integer
	  - introduction of new type status_type, which represents the 64bit integer type for status:
	    #define status_type unsigned long long
	    Problem with long long type is that only g++ knows it. If we're going to port it to another compiler, something like this should be correct:
		#ifdef MSVC++
		#define status_type __uint64
		#elif defined (G++)
		#define status_type unsigned long long
		#endif
	  - changed necessary int and/or char kind; in keysignature operations to status_type kind;
	  - whenever doing anything with STAT_* from now on (any comparison, bitmask operations and similar), always use status_type for operating type! int and other smaller types are not usable anymore!
	  - int length_before_edit_ was introduced, because status_before_edit_ isn't appropriate anymore, to contain the length of the last selected note as well.
	  - removed note_dymmy_ as it's not needed anymore IMO
	* MusicXML import - reverted voice numbering behaviour. R323