@@ -152,15 +152,15 @@ void NLilyExport::exportStaffs(QString fname, QList<NStaff> *stafflist, exportFr
 	out_ << "%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%" << endl;
 	out_ << "%                                  %" << endl;
 	out_ << "%   LilyPond output generated by   %" << endl;
-	out_ << "%       \"noteedit\" " <<  VERSION << "           %" << endl;
+	out_ << "%       \"NoteEdit\" " <<  VERSION << "           %" << endl;
 	out_ << "%                                  %" << endl;
 	out_ << "%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%" << endl << endl;
 	if (NResource::lilyProperties_.lilyVersion26) {
-    	out_ << "\\version \"2.6.1\"" << endl << endl;		// LilyPond version 2.6.1 is the one that it is tested with.
+    	out_ << "\\version \"2.6.3\"" << endl << endl;		// LilyPond version 2.6.3 is the one that it is tested with.
 	} else if (NResource::lilyProperties_.lilyVersion24) {
-    	out_ << "\\version \"2.4.2\"" << endl << endl;		// LilyPond version 2.4.2 is the one that it is tested with.
+    	out_ << "\\version \"2.4.5\"" << endl << endl;		// LilyPond version 2.4.5 is the one that it is tested with.
 	} else {
-    	out_ << "\\version \"2.0\"" << endl << endl;        // We currently support LilyPond version 2.0 syntax for sure. We must mention this in order to make convert-ly working.
+    	out_ << "\\version \"2.0\"" << endl << endl;        // Obsolete.
 	}
 	if (!exportDialog_->lilyVoice->isChecked()) {
 		if (NResource::lilyProperties_.lilyProperties) {
@@ -1145,7 +1145,7 @@ void NLilyExport::writeVoice(int staff_nr,  int voice_nr, NVoice *voi) {
 								pending_segnos_rirads_accels &= (~(PENDING_DAL_SEGNO_AL_FINE));
 							}
 							if (pending_segnos_rirads_accels & PENDING_FINE) {
-								out_ << "^#'(Large \"Fine\") ";
+								out_ << "^#'(large \"Fine\") ";
 								pending_segnos_rirads_accels &= (~(PENDING_FINE));
 							}
 							if (pending_segnos_rirads_accels & PENDING_DAL_SEGNO_AL_CODA) {
@@ -1157,11 +1157,11 @@ void NLilyExport::writeVoice(int staff_nr,  int voice_nr, NVoice *voi) {
 								pending_segnos_rirads_accels &= (~(PENDING_CODA));
 							}
 							if (pending_segnos_rirads_accels & PENDING_RITARDANDO) {
-								out_ << "^#'(large \"ritard.\") ";
+								out_ << "_#'(large \"ritard.\") ";
 								pending_segnos_rirads_accels &= (~(PENDING_RITARDANDO));
 							}
 							if (pending_segnos_rirads_accels & PENDING_ACCELERANDO) {
-								out_ << "^#'(large \"accel.\") ";
+								out_ << "_#'(large \"accel.\") ";
 								pending_segnos_rirads_accels &= (~(PENDING_ACCELERANDO));
 							}
 							if (chord->status_ & STAT_SLURED) {
@@ -1207,10 +1207,10 @@ void NLilyExport::writeVoice(int staff_nr,  int voice_nr, NVoice *voi) {
 					}
 					if (pending_text) {
 						if (pending_text->getSubType() == TEXT_UPTEXT) {
-							out_ << "^\\markup{\\large\\bold " << pending_text->getText() << "} ";
+							out_ << "^\\markup{\\large {" << pending_text->getText() << "} } ";
 						}
 						else  {
-							out_ << "_\\markup{\\large\\bold " << pending_text->getText() << "} ";
+							out_ << "_\\markup{\\large {" << pending_text->getText() << "} } ";
 						}
 						pending_text = 0;
 					}
@@ -1234,7 +1234,7 @@ void NLilyExport::writeVoice(int staff_nr,  int voice_nr, NVoice *voi) {
 						pending_segnos_rirads_accels &= (~(PENDING_FINE));
 					}
 					if (pending_segnos_rirads_accels & PENDING_DAL_SEGNO_AL_CODA) {
-						out_ << "^\\markup{\\large D.S. al \\textcodaysym}";
+						out_ << "^\\markup{\\large D.S. al \\textcodaysym} ";
 						pending_segnos_rirads_accels &= (~(PENDING_DAL_SEGNO_AL_CODA));
 					}
 					if (pending_segnos_rirads_accels & PENDING_CODA) {
@@ -1242,11 +1242,11 @@ void NLilyExport::writeVoice(int staff_nr,  int voice_nr, NVoice *voi) {
 						pending_segnos_rirads_accels &= (~(PENDING_CODA));
 					}
 					if (pending_segnos_rirads_accels & PENDING_RITARDANDO) {
-						out_ << "^\\markup{\\large ritard.} ";
+						out_ << "_\\markup{\\large\\italic ritard.} ";
 						pending_segnos_rirads_accels &= (~(PENDING_RITARDANDO));
 					}
 					if (pending_segnos_rirads_accels & PENDING_ACCELERANDO) {
-						out_ << "^\\markup{\\large accel.} ";
+						out_ << "_\\markup{\\large\\italic accel.} ";
 						pending_segnos_rirads_accels &= (~(PENDING_ACCELERANDO));
 					}
 					if ((chord->status_ & STAT_PART_OF_SLUR) && !inLongacciaccatura) {
